max height + overflow fix?

--- a/src/components/NoteDialogComponents/NoteDialogNoteWrapper.scss
+++ b/src/components/NoteDialogComponents/NoteDialogNoteWrapper.scss
@@ -4,24 +4,26 @@
 
 .note-dialog__scrollbar {
   // TODO right container height
-  padding-left: 10px;
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 
-  flex-grow: 1;
+  min-height: 0;
   overflow: hidden scroll;
-  max-height: 650px;
+
+  box-sizing: border-box;
+  border-radius: $note__border-radius;
+
   @include scrollbar($color: var(--accent-color)); // TODO scrollbar visibility
 }
 
 .note-dialog__note-wrapper {
   margin: 0;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: $spacing--base;
-  overflow-y: hidden;
 }
 
 @media #{$smartphone} {
