--- a/src/routes/StackView/StackView.scss
+++ b/src/routes/StackView/StackView.scss
@@ -3,9 +3,9 @@
 $stack-view__header-height: 14vh;
 $stack-view__navigation-height: 14vh;
 $stack-view__min-height: 82px;
+$wrapper-max-height: 670px;
 
 .stack-view__portal {
-  background-color: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(10px) brightness(0.76) saturate(0);
   background: rgba(var(--accent-color-rgb), 0.42);
   transition: all 0.2s ease-in-out;
@@ -45,7 +45,8 @@ $stack-view__min-height: 82px;
   width: fit-content;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  max-height: $wrapper-max-height;
+  gap: $spacing--sm;
 }
 
 .stack-view__disabled-click {
